force-app/main/default/objects/Krow__Expense_Line__c/Krow__Expense_Line__c.object-meta.xml
<CustomObject>
    <label>Expense Line</label>
    <nameField>
        <displayFormat>EL{00000000}</displayFormat>
        <label>Expense Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>