force-app/main/default/objects/Krow__Expense_Line__c/fields/Krow__Department__c.field-meta.xml
<CustomField>
    <fullName>Krow__Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>Krow__Department__c</referenceTo>
    <relationshipLabel>Expense Lines</relationshipLabel>
    <relationshipName>Expense_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>