force-app/main/default/objects/Krow__Expense_Line__c/fields/Krow__Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Krow__Exchange_Rate__c</fullName>
    <label>Exchange Rate</label>
    <precision>16</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>