force-app/main/default/objects/Krow__Expense_Line__c/fields/Krow__Expense__c.field-meta.xml
<CustomField>
    <fullName>Krow__Expense__c</fullName>
    <label>Expense Report</label>
    <referenceTo>Krow__Expense_Krow__c</referenceTo>
    <relationshipLabel>Expense Lines</relationshipLabel>
    <relationshipName>Expense_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>