force-app/main/default/objects/Krow__Expense_Line__c/fields/Krow__Expense_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Expense_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Expense Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>