force-app/main/default/objects/Krow__Expense_Line__c/fields/Krow__Expense_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Expense_Date__c</fullName>
    <label>Expense Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>