force-app/main/default/objects/Krow__Expense_Line__c/fields/Krow__Expense_Item__c.field-meta.xml
<CustomField>
    <fullName>Krow__Expense_Item__c</fullName>
    <label>Expense Item</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airfare</fullName>
            </value>
            <value>
                <fullName>Meals</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>