force-app/main/default/objects/Krow__Expense_Line__c/fields/Krow__Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Expense_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Expense Type</label>
    <referenceTo>Krow__Expense_Type__c</referenceTo>
    <relationshipLabel>Expense Lines</relationshipLabel>
    <relationshipName>Expense_Lines</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>