force-app/main/default/objects/Krow__Expense_Line__c/fields/Krow__Foreign_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Foreign_Amount__c</fullName>
    <label>Foreign Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>