force-app/main/default/objects/Krow__Expense_Line__c/fields/Krow__Foreign_Currency__c.field-meta.xml
<CustomField>
    <fullName>Krow__Foreign_Currency__c</fullName>
    <label>Foreign Currency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>