force-app/main/default/objects/Krow__Expense_Line__c/fields/Krow__Inserted__c.field-meta.xml
<CustomField>
    <fullName>Krow__Inserted__c</fullName>
    <description>When was expense inserted on expensify?</description>
    <inlineHelpText>When was expense inserted on expensify?</inlineHelpText>
    <label>Inserted</label>
    <type>DateTime</type>
</CustomField>