force-app/main/default/objects/Krow__Expense_Line__c/fields/Krow__Intacct_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Intacct_Item_Id__c</fullName>
    <label>Deprecated</label>
    <length>15</length>
    <type>Text</type>
</CustomField>