force-app/main/default/objects/Krow__Expense_Line__c/fields/Krow__Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Item_Id__c</fullName>
    <inlineHelpText>Item Id for expense related item in intacct</inlineHelpText>
    <label>Item Id</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>310</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>