force-app/main/default/objects/Krow__Expense_Line__c/fields/Krow__Merchant__c.field-meta.xml
<CustomField>
    <fullName>Krow__Merchant__c</fullName>
    <label>Merchant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABC Taxi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>