force-app/main/default/objects/Krow__Expense_Line__c/fields/Krow__Pre_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Pre_Tax_Amount__c</fullName>
    <formula>Krow__Total_Amount__c - Krow__Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre-Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>