force-app/main/default/objects/Krow__Expense_Line__c/fields/Krow__Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Krow__Project__c.Krow__Archived__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Expense Lines</relationshipLabel>
    <relationshipName>Expense_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>