force-app/main/default/objects/Krow__Expense_Line__c/fields/Krow__Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Tax_Amount__c</fullName>
    <description>This will hold tax/vat amount on the expense line.</description>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>