force-app/main/default/objects/Krow__Expense_Line__c/fields/Krow__Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Tax_Type__c</fullName>
    <defaultValue>&apos;Including Tax&apos;</defaultValue>
    <label>Tax Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Including Tax</fullName>
            </value>
            <value>
                <fullName>Excluding Tax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>