force-app/main/default/objects/Krow__Expense_Line__c/fields/Krow__Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Amount__c</fullName>
    <formula>IF( TEXT(Krow__Tax_Type__c) == &apos;Including Tax&apos;,(Krow__Expense_Amount__c),(Krow__Expense_Amount__c + Krow__Tax_Amount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>