force-app/main/default/objects/Krow__Expense_Line__c/fields/Krow__Xero_Receipt_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Xero_Receipt_Id__c</fullName>
    <label>Xero Receipt Id</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>