force-app/main/default/objects/Krow__Expense_Line__c/validationRules/Krow__Less_Than_Max_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Krow__Less_Than_Max_Amount</fullName>
    <active>true</active>
    <description>Amount entered in this field should be less than maximun amount on expense type max amount field.</description>
    <errorConditionFormula>Krow__Expense_Amount__c &gt; Krow__Expense_Type__r.Krow__Max_Amount__c</errorConditionFormula>
    <errorMessage>The amount entered is greater than the maximum allowable for this expense type.</errorMessage>
</ValidationRule>